Project

General

Profile

Actions

Bug #47217

closed

'request failed: (13) Permission denied' from radosgw-admin period pull with --remote

Added by Casey Bodley over 3 years ago. Updated over 3 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
-
Target version:
-
% Done:

0%

Source:
Tags:
multisite
Backport:
nautilus octopus
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

The 'period pull' command uses get_raw_storage() for initialization, which doesn't load the period/zone configuration. This works fine with --url, but when given a --remote the local zone's access keys are uninitialized.


Related issues 2 (0 open2 closed)

Copied to rgw - Backport #47314: octopus: 'request failed: (13) Permission denied' from radosgw-admin period pull with --remoteResolvedNathan CutlerActions
Copied to rgw - Backport #47315: nautilus: 'request failed: (13) Permission denied' from radosgw-admin period pull with --remoteResolvedNathan CutlerActions
Actions #1

Updated by Casey Bodley over 3 years ago

  • Pull request ID set to 36913
Actions #2

Updated by Casey Bodley over 3 years ago

  • Status changed from New to Fix Under Review
Actions #3

Updated by Casey Bodley over 3 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #4

Updated by Nathan Cutler over 3 years ago

  • Copied to Backport #47314: octopus: 'request failed: (13) Permission denied' from radosgw-admin period pull with --remote added
Actions #5

Updated by Nathan Cutler over 3 years ago

  • Copied to Backport #47315: nautilus: 'request failed: (13) Permission denied' from radosgw-admin period pull with --remote added
Actions #6

Updated by Nathan Cutler over 3 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF